--- a/app/index.html
+++ b/app/index.html
@@ -1,10 +1,78 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-$END$
+<header>
+    <div class="top-bar">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3 phones">
+                  <ul>
+                      <li class="mts">8 029 577 76 24</li>
+                      <li class="vel">8 029 362 28 75</li>
+                  </ul>
+                </div>
+                <div class="col-md-3 viber-skype">
+                    <ul>
+                        <li class="viber">Viber</li>
+                        <li class="skype">Skype</li>
+                        <li class="email">E-mail</li>
+                    </ul>
+                </div>
+                <div class="col-md-4 work-time">
+                   <div>ПН-ПТ: 09-19, СБ:10-17, ВС-ВЫХ</div>
+                </div>
+                <div class="col-md-2 login-register">
+                    <div><a href="">Вход | Регистрация</a></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="top-logo">
+        <div class="container">
+            <div class="row">
+              <div class="col-md-12 text-center">
+                  <a href=""><img src="img/logo.png" alt=""></a>
+              </div>
+            </div>
+        </div>
+    </div>
+    <div class="top-menu">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 search">
+                    <form action="">
+                        <input type="text">
+                        <input type="submit" value="">
+                    </form>
+                </div>
+                <div class="col-md-7 menu">
+                        <ul>
+                            <li>Каталог</li>
+                            <li>Оплата</li>
+                            <li>Доставка</li>
+                            <li>Акции</li>
+                            <li>Отзывы</li>
+                            <li>Контакты</li>
+                            <li>О нас</li>
+                        </ul>
+                </div>
+                <div class="col-md-1 cart-favorite">
+                    <div class="cart"></div>
+                    <div class="favorite"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+</header>
 </body>
+<script src="js/jquery-3.2.1.min.js"></script>
+<script src="js/bootstrap.min.js"> </script>
 </html>
