--- a/app/index.html
+++ b/app/index.html
@@ -72,6 +72,45 @@
 
 
 </header>
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+        <div class="item active">
+            <img src="img/slide1.jpg" alt="Test">
+            <div class="carousel-caption guitar">
+                <h3>ОТ 6% СКИДКИ</h3>
+                <p>При покупке любой гитары</p>
+                <a href="">Подробнее</a>
+            </div>
+        </div>
+        <div class="item ">
+            <img src="img/slide1.jpg" alt="Test">
+            <div class="carousel-caption guitar">
+                <h3>ОТ 6% СКИДКИ</h3>
+                <p>При покупке любой гитары</p>
+                <a href="">Подробнее</a>
+            </div>
+        </div>
+        <div class="item ">
+            <img src="img/slide1.jpg" alt="Test">
+            <div class="carousel-caption guitar">
+                <h3>ОТ 6% СКИДКИ</h3>
+                <p>При покупке любой гитары</p>
+                <a href="">Подробнее</a>
+            </div>
+        </div>
+
+
+    </div>
+</div>
+
 </body>
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="js/bootstrap.min.js"> </script>
