--- a/app/index.html
+++ b/app/index.html
@@ -72,12 +72,12 @@
 
 
 </header>
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
+<div id="topCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
+        <li data-target="#topCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#topCarousel" data-slide-to="1"></li>
+        <li data-target="#topCarousel" data-slide-to="2"></li>
     </ol>
 
     <!-- Wrapper for slides -->
@@ -106,12 +106,293 @@
                 <a href="">Подробнее</a>
             </div>
         </div>
-
-
     </div>
 </div>
+<section class="main-page-catalog">
+    <div class="container">
+        <div class="row">
+            <h2 class='caption'>Каталог</h2>
+            <div class="col-md-3 catalog-block">
+                <a href="">
+                    <div class="catalog-block-caption">
+                        Гитары
+                    </div>
+                    <div class="img">
+                        <img src="/img/main-catalog/g.jpg" alt="">
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-3 catalog-block">
+                <a href="">
+                    <div class="catalog-block-caption">
+                        Гитарное оборудование
+                    </div>
+                    <div class="img">
+                        <img src="/img/main-catalog/_1_20150914100908.jpg" alt="">
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-3 catalog-block">
+                <a href="">
+                    <div class="catalog-block-caption">
+                        Клавишные
+                    </div>
+                    <div class="img">
+                        <img src="img/main-catalog/157613528.jpg" />
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-3 catalog-block">
+                <a href="">
+                    <div class="catalog-block-caption">
+                        Микрофоны
+                    </div>
+                    <div class="img">
+                        <img src="img/main-catalog/Layer 21.jpg" />
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-3 catalog-block">
+                <a href="">
+                    <div class="catalog-block-caption">
+                        Звуковое оборудование
+                    </div>
+                    <div class="img">
+                        <img src="img/main-catalog/Layer 26.jpg" />
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-3 catalog-block">
+                <a href="">
+                    <div class="catalog-block-caption">
+                        Студийное оборудование
+                    </div>
+                    <div class="img">
+                        <img src="img/main-catalog/Layer 23.jpg" />
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-3 catalog-block">
+                <a href="">
+                    <div class="catalog-block-caption">
+                        Световое оборудование
+                    </div>
+                    <div class="img">
+                        <img src="img/main-catalog/Layer 28.jpg" />
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-3 catalog-block">
+                <a href="">
+                    <div class="catalog-block-caption">
+                        Dj-оборудование
+                    </div>
+                    <div class="img">
+                        <img src="img/main-catalog/Layer 27.jpg" />
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-3 catalog-block">
+                <a href="">
+                    <div class="catalog-block-caption">
+                        Ударные инструменты
+                    </div>
+                    <div class="img">
+                        <img src="img/main-catalog/Selective Color 1.jpg" />
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-3 catalog-block">
+                <a href="">
+                    <div class="catalog-block-caption">
+                        Коммутация
+                    </div>
+                    <div class="img">
+                        <img src="img/main-catalog/Hue_Saturation 2 (1).jpg"/>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-3 catalog-block">
+                <a href="">
+                    <div class="catalog-block-caption">
+                        Акции
+                    </div>
+                    <div class="img">
+                        <img src="img/main-catalog/Selective Color 1 (1).jpg"/>
+                    </div>
+                </a>
+            </div>
+
+
+
+        </div>
+    </div>
+
+</section>
+<section class="main-page-carousel">
+    <div class="container">
+        <div class="row">
+            <h2 class='caption'>Популярные товары</h2>
+            <div id="bottomCarousel" class="carousel slide" data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                    <li data-target="#bottomCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#bottomCarousel" data-slide-to="1"></li>
+                    <li data-target="#bottomCarousel" data-slide-to="2"></li>
+                </ol>
+
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner">
+                    <div class="item active">
+                      <div class="carousel-product-block">
+                          <a href="">
+                            <div class="carousel-product-block-img">
+                                <img src="img/main-carousel/photo.jpg">
+                                <div class="carousel-product-block-img-action">
+                                    SALE
+                                </div>
+                            </div>
+                            <div class="carousel-product-block-caption">
+                                Гармонь
+                            </div>
+                            <div class="carousel-product-block-info">
+                                Педаль эфеектов Palmer Pocket Raio Over-drive - Overdrive Pedal
+                            </div>
+                            <div class="carousel-product-block-price">
+                                <span class="discount-price">215 руб</span>
+                                <span class="old-price">215 руб</span>
+                            </div>
+                              <div class="carousel-product-block-cart">
+                                  <ul class="hover-block">
+                                      <li class="add-to-favorite"> <span></span></li>
+                                      <li class="add-to-cart"><span></span></li>
+                                      <li class="add-to-compare"><span></span></li>
+                                  </ul>
+                              </div>
+                          </a>
+                      </div>
+
+                        <div class="carousel-product-block">
+                          <a href="">
+                            <div class="carousel-product-block-img">
+                                <img src="img/main-carousel/photo.jpg">
+                                <div class="carousel-product-block-img-action">
+                                    SALE
+                                </div>
+                            </div>
+                            <div class="carousel-product-block-caption">
+                                Гармонь
+                            </div>
+                            <div class="carousel-product-block-info">
+                                Педаль эфеектов Palmer Pocket Raio Over-drive - Overdrive Pedal
+                            </div>
+                            <div class="carousel-product-block-price">
+                                <span class="discount-price">215 руб</span>
+                                <span class="old-price">215 руб</span>
+                            </div>
+                              <div class="carousel-product-block-cart">
+                                  <ul class="hover-block">
+                                      <li class="add-to-favorite"> <span></span></li>
+                                      <li class="add-to-cart"><span></span></li>
+                                      <li class="add-to-compare"><span></span></li>
+                                  </ul>
+                              </div>
+                          </a>
+                      </div>
+                        <div class="carousel-product-block">
+                          <a href="">
+                            <div class="carousel-product-block-img">
+                                <img src="img/main-carousel/photo.jpg">
+                                <div class="carousel-product-block-img-action">
+                                    SALE
+                                </div>
+                            </div>
+                            <div class="carousel-product-block-caption">
+                                Гармонь
+                            </div>
+                            <div class="carousel-product-block-info">
+                                Педаль эфеектов Palmer Pocket Raio Over-drive - Overdrive Pedal
+                            </div>
+                            <div class="carousel-product-block-price">
+                                <span class="discount-price">215 руб</span>
+                                <span class="old-price">215 руб</span>
+                            </div>
+                              <div class="carousel-product-block-cart">
+                                  <ul class="hover-block">
+                                      <li class="add-to-favorite"> <span></span></li>
+                                      <li class="add-to-cart"><span></span></li>
+                                      <li class="add-to-compare"><span></span></li>
+                                  </ul>
+                              </div>
+                          </a>
+                      </div>
+                        <div class="carousel-product-block">
+                          <a href="">
+                            <div class="carousel-product-block-img">
+                                <img src="img/main-carousel/photo.jpg">
+                                <div class="carousel-product-block-img-action">
+                                    SALE
+                                </div>
+                            </div>
+                            <div class="carousel-product-block-caption">
+                                Гармонь
+                            </div>
+                            <div class="carousel-product-block-info">
+                                Педаль эфеектов Palmer Pocket Raio Over-drive - Overdrive Pedal
+                            </div>
+                            <div class="carousel-product-block-price">
+                                <span class="discount-price">215 руб</span>
+                                <span class="old-price">215 руб</span>
+                            </div>
+                              <div class="carousel-product-block-cart">
+                                  <ul class="hover-block">
+                                      <li class="add-to-favorite"> <span></span></li>
+                                      <li class="add-to-cart"><span></span></li>
+                                      <li class="add-to-compare"><span></span></li>
+                                  </ul>
+                              </div>
+                          </a>
+                      </div>
+
+                        <div class="carousel-product-block">
+                          <a href="">
+                            <div class="carousel-product-block-img">
+                                <img src="img/main-carousel/photo.jpg">
+                                <div class="carousel-product-block-img-action">
+                                    SALE
+                                </div>
+                            </div>
+                            <div class="carousel-product-block-caption">
+                                Гармонь
+                            </div>
+                            <div class="carousel-product-block-info">
+                                Педаль эфеектов Palmer Pocket Raio Over-drive - Overdrive Pedal
+                            </div>
+                            <div class="carousel-product-block-price">
+                                <span class="discount-price">215 руб</span>
+                                <span class="old-price">215 руб</span>
+                            </div>
+                              <div class="carousel-product-block-cart">
+                                  <ul class="hover-block">
+                                      <li class="add-to-favorite"> <span></span></li>
+                                      <li class="add-to-cart"><span></span></li>
+                                      <li class="add-to-compare"><span></span></li>
+                                  </ul>
+                              </div>
+                          </a>
+                      </div>
+
+
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 </body>
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="js/bootstrap.min.js"> </script>
+<script src="js/script.js"> </script>
 </html>
