--- a/app/index.html
+++ b/app/index.html
@@ -845,24 +845,119 @@
             </ul>
             <div class="tab-content">
                 <div id="A" class="tab-pane fade in active">
-                    <h3>HOME</h3>
-                    <p>Some content.</p>
+                    <ul>
+                        <li>Ableton</li>
+                        <li>Accessc</li>
+                        <li>Adamr</li>
+                          <li>Ableton</li>
+                        <li>Accessc</li>
+                        <li>Adamr</li>
+                          <li>Ableton</li>
+                        <li>Accessc</li>
+                        <li>Adamr</li>
+                          <li>Ableton</li>
+                        <li>Accessc</li>
+                        <li>Adamr</li>
+                          <li>Ableton</li>
+                        <li>Accessc</li>
+                        <li>Adamr</li>
+                          <li>Ableton</li>
+                        <li>Accessc</li>
+                        <li>Adamr</li>
+
+                    </ul>
                 </div>
                 <div id="B" class="tab-pane fade">
-                    <h3>Menu 1</h3>
-                    <p>Some content in menu 1.</p>
+                    <ul>
+                        <li>Ableton</li>
+                        <li>Accessc</li>
+                        <li>Adamr</li>
+                        <li>Ableton</li>
+                        <li>Accessc</li>
+                        <li>Adamr</li>
+                        <li>Ableton</li>
+                        <li>Accessc</li>
+                        <li>Adamr</li>
+                        <li>Ableton</li>
+                        <li>Accessc</li>
+                        <li>Adamr</li>
+                        <li>Ableton</li>
+                        <li>Accessc</li>
+                        <li>Adamr</li>
+                        <li>Ableton</li>
+                        <li>Accessc</li>
+                        <li>Adamr</li>
+
+                    </ul>
                 </div>
                 <div id="C" class="tab-pane fade">
-                    <h3>Menu 2</h3>
-                    <p>Some content in menu 2.</p>
+                    <ul>
+                        <li>Ableton</li>
+                        <li>Accessc</li>
+                        <li>Adamr</li>
+                        <li>Ableton</li>
+                        <li>Accessc</li>
+                        <li>Adamr</li>
+                        <li>Ableton</li>
+                        <li>Accessc</li>
+                        <li>Adamr</li>
+                        <li>Ableton</li>
+                        <li>Accessc</li>
+                        <li>Adamr</li>
+                        <li>Ableton</li>
+                        <li>Accessc</li>
+                        <li>Adamr</li>
+                        <li>Ableton</li>
+                        <li>Accessc</li>
+                        <li>Adamr</li>
+
+                    </ul>
                 </div>
                 <div id="D" class="tab-pane fade">
-                    <h3>Menu 2</h3>
-                    <p>Some content in menu 2.</p>
+                    <ul>
+                        <li>Ableton</li>
+                        <li>Accessc</li>
+                        <li>Adamr</li>
+                        <li>Ableton</li>
+                        <li>Accessc</li>
+                        <li>Adamr</li>
+                        <li>Ableton</li>
+                        <li>Accessc</li>
+                        <li>Adamr</li>
+                        <li>Ableton</li>
+                        <li>Accessc</li>
+                        <li>Adamr</li>
+                        <li>Ableton</li>
+                        <li>Accessc</li>
+                        <li>Adamr</li>
+                        <li>Ableton</li>
+                        <li>Accessc</li>
+                        <li>Adamr</li>
+
+                    </ul>
                 </div>
                 <div id="C" class="tab-pane fade">
-                    <h3>Menu 2</h3>
-                    <p>Some content in menu 2.</p>
+                    <ul>
+                        <li>Ableton</li>
+                        <li>Accessc</li>
+                        <li>Adamr</li>
+                        <li>Ableton</li>
+                        <li>Accessc</li>
+                        <li>Adamr</li>
+                        <li>Ableton</li>
+                        <li>Accessc</li>
+                        <li>Adamr</li>
+                        <li>Ableton</li>
+                        <li>Accessc</li>
+                        <li>Adamr</li>
+                        <li>Ableton</li>
+                        <li>Accessc</li>
+                        <li>Adamr</li>
+                        <li>Ableton</li>
+                        <li>Accessc</li>
+                        <li>Adamr</li>
+
+                    </ul>
                 </div>
                 <div id="C" class="tab-pane fade">
                     <h3>Menu 2</h3>
@@ -885,6 +980,115 @@
     </div>
 
 </section>
+<section class="main-page-news">
+    <div class="container">
+        <div class="row">
+            <h2 class='caption'>Новости</h2>
+            <div class="col-md-4 news-block">
+                <a href="">
+                    <div class="news-img"><img src="img/photo.jpg"/></div>
+                    <div class="news-date">20 / 04 / 17</div>
+                    <div class="news-title">20% СКИДКА НА RME В ЧЕСТЬ 20-ЛЕТИЯ КОМПАНИИ SWITCH2RMECHROME</div>
+                    <div class="news-text">Аудиоинтерфейсы RME - это  отличное профессионал из ональное cтудийное оборудование высочайшего качества, предоставляющее своим пользователям невроятный набор функций.  </div>
+                </a>
+            </div>
+            <div class="col-md-4 news-block">
+                <a href="">
+                    <div class="news-img"><img src="img/photo1.jpg"/></div>
+                    <div class="news-date">20 / 04 / 17</div>
+                    <div class="news-title">20% СКИДКА НА RME В ЧЕСТЬ 20-ЛЕТИЯ КОМПАНИИ SWITCH2RMECHROME</div>
+                    <div class="news-text">Аудиоинтерфейсы RME - это  отличное профессионал из ональное cтудийное оборудование высочайшего качества, предоставляющее своим пользователям невроятный набор функций.  </div>
+                </a>
+            </div>
+            <div class="col-md-4 news-block">
+                <a href="">
+                    <div class="news-img"><img src="img/photo2.jpg"/></div>
+                    <div class="news-date">20 / 04 / 17</div>
+                    <div class="news-title">20% СКИДКА НА RME В ЧЕСТЬ 20-ЛЕТИЯ КОМПАНИИ SWITCH2RMECHROME</div>
+                    <div class="news-text">Аудиоинтерфейсы RME - это  отличное профессионал из ональное cтудийное оборудование высочайшего качества, предоставляющее своим пользователям невроятный набор функций.  </div>
+                </a>
+            </div>
+        </div>
+    </div>
+</section>
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-2 bottom-logo">
+                <img src="img/logo.svg" alt="">
+                <p class="copyright">© 2017 Music-hall.by</p>
+            </div>
+            <div class="col-md-2 bottom-menu">
+                <div class="title">Категории</div>
+                <ul>
+                    <li><a href="">Весь каталог</a></li>
+                    <li><a href="">Контроллеры и клавиатуры</a></li>
+                    <li><a href="">Звуковые карты</a></li>
+                    <li><a href="">Студийные мониторы</a></li>
+                </ul>
+            </div>
+            <div class="col-md-2 bottom-menu">
+                <div class="title">Помощь</div>
+                <ul>
+                    <li><a href="">Контакты магазина</a></li>
+                    <li><a href="">Оплата и доставка</a></li>
+                    <li><a href="">Наши клиенты</a></li>
+                    <li><a href="">Новости</a></li>
+                    <li><a href="">Документы</a></li>
+                </ul>
+            </div>
+            <div class="col-md-2 bottom-menu">
+                <div class="title">Для покупателей</div>
+                <ul>
+                    <li><a href="">Корзина</a></li>
+                    <li><a href="">Сравнение</a></li>
+                    <li><a href="">Отложенные</a></li>
+                    <li><a href="">Вход</a></li>
+                    <li><a href="">Регистрация</a></li>
+                </ul>
+            </div>
+            <div class="col-md-4 contacts">
+                <div class="phones">
+                    <div class="mts"><span>8 029</span> 577 76 24</div>
+                    <div class="vel"><span>8 033</span> 362 28 75</div>
+                </div>
+                <p class="address"><img src="img/mapmarker.png" alt="">220019, г. Минск, ул.Сухаревская 28/41</p>
+                <div class="social">
+                    <ul>
+                        <li class="vk"><a href=""></a></li>
+                        <li class="insta"><a href=""></a></li>
+                        <li class="teleg"><a href=""></a></li>
+                    </ul>
+                </div>
+                <div class="off-info">
+                    BSB Bank | г. Минск, 220004, Пр-т Победителей 23-4Код банка -153001(175)Р/С IBAN: BY62UNBS301316551100020000933 (в  бел.руб.)
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="down-menu">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 menu_bottom">
+                    <ul>
+                        <li><a href="">Каталог</a></li>
+                        <li><a href="">Оплата</a></li>
+                        <li><a href="">Доставка</a></li>
+                        <li><a href="">Акции</a></li>
+                        <li><a href="">Отзывы</a></li>
+                        <li><a href="">Контакты</a></li>
+                        <li><a href="">О нас</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-offset-2 col-md-4">
+                    <div class="bottom-copyright">
+                        ИП Шелкович Виталий Евгеньевич г. Минск, ул. Сухаревская 28-41УНП - 192511707
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
 
 </body>
 <script src="js/jquery-3.2.1.min.js"></script>
