--- a/app/product.html
+++ b/app/product.html
@@ -103,8 +103,45 @@
                 </div>
                 <div class="cart-block">
                     <button class="add-to-cart">в корзину</button>
-                    <button class="add-to-lovely"></button>
-                    <button class="add-to-compare"></button>
+                    <button class="add-to-lovely">
+                        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                             viewBox="0 0 15.5 14.3" style="enable-background:new 0 0 15.5 14.3;" xml:space="preserve">
+                        <g id="dd-03" transform="translate(10643 2379)">
+                            <g id="Path_2923">
+                                <path d="M-10635.2-2364.7l-0.7-0.5c-0.7-0.6-7.1-5.7-7.1-9.1l0-0.1c0-2.5,2-4.6,4.5-4.6c1.2-0.1,2.3,0.2,3.2,1
+                                    c0.9-0.7,2-1.1,3.2-1l0.1,0c1.2,0,2.4,0.5,3.2,1.4s1.3,2.1,1.3,3.3c0,2.6-3.2,5.7-6.3,8.3c-0.3,0.3-0.6,0.5-0.8,0.7
+                                    L-10635.2-2364.7z M-10638-2377c-0.1,0-0.2,0-0.3,0l-0.1,0c-0.7,0-1.3,0.3-1.8,0.8c-0.5,0.5-0.8,1.1-0.8,1.8l0,0.1
+                                    c0,1.6,3.2,4.9,5.7,7c0.1-0.1,0.1-0.1,0.2-0.2c1.7-1.4,5.6-4.8,5.6-6.8c0-0.7-0.2-1.4-0.7-1.9c-0.5-0.5-1.1-0.8-1.8-0.8l-0.2,0
+                                    c-0.8-0.1-1.7,0.3-2.2,1l-0.8,1.1l-0.8-1.1C-10636.5-2376.6-10637.3-2377-10638-2377z"/>
+                            </g>
+                        </g>
+                        </svg>
+                        в избранное
+                    </button>
+                    <button class="add-to-compare">
+                        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                                 viewBox="0 0 14 14" style="enable-background:new 0 0 14 14;" xml:space="preserve">
+                            <path id="Union_3" class="st0" d="M6,14V8H0V6h6V0h2v6h6v2H8v6H6z"/>
+                        </svg>
+                        сравнить
+                    </button>
+                </div>
+                <div class="social-block">
+                    <div class="vk">
+                        <object data="img/product/all_round-26.svg" type="image/svg+xml"></object>
+                        <object data="img/product/arrow-02.svg" type="image/svg+xml" class="arrow"></object>
+                        <span>28</span>
+                    </div>
+                    <div class="face">
+                        <object data="img/product/all_round-07.svg" type="image/svg+xml"></object>
+                        <object data="img/product/arrow-1.svg" type="image/svg+xml" class="arrow"></object>
+                        <span>28</span>
+                    </div>
+                    <div class="twit">
+                        <object data="img/product/all_round-01.svg" type="image/svg+xml"></object>
+                        <object data="img/product/arrow-2.svg" type="image/svg+xml" class="arrow"></object>
+                        <span>28</span>
+                    </div>
                 </div>
             </div>
         </div>
