product-page-ready

--- a/app/product.html
+++ b/app/product.html
@@ -108,74 +108,126 @@
                     </div>
                 </div>
                 <div class="charat">
-                    <div class="header">
-                        <h3>ХАРАКТЕРИСТИКИ</h3> <h3>ОТЗЫВЫ</h3>
-                    </div>
-                    <table>
-                        <tr>
-                            <td>Вес</td>
-                            <td>Нормальное</td>
-                        </tr>
-                        <tr>
-                            <td>КОЛИЧЕСТВО ПОЛОС</td>
-                            <td>Нормальное</td>
-                        </tr>
-                        <tr>
-                            <td>РАЗМЕР</td>
-                            <td>Нормальное</td>
-                        </tr>
-                        <tr>
-                            <td>ТИП</td>
-                            <td>Нормальное</td>
-                        </tr>
-                        <tr>
-                            <td>РАСПОЛОЖЕНИЕ</td>
-                            <td>Нормальное</td>
-                        </tr>
-                        <tr>
-                            <td>АКУСТИЧЕСКОЕ ОФОРМЛЕНИЕ</td>
-                            <td>Нормальное</td>
-                        </tr>
-                        <tr>
-                            <td>ФАЗОИНВЕКТОР</td>
-                            <td>Нормальное</td>
-                        </tr>
-                        <tr>
-                            <td>НАЛИЧИЕ ЦИФРОВОГО ХОДА</td>
-                            <td>Нормальное</td>
-                        </tr>
-                        <tr>
-                            <td>НИЖНЯЯ ГРАНИЦА ДИАПАЗОНА,HZ</td>
-                            <td>Нормальное</td>
-                        </tr>
-                        <tr>
-                            <td>ВЕРХНЯЯ ГРАНИЦА ЧАСТОТНОГО ДИАПАЗОНА,kHZ</td>
-                            <td>Нормальное</td>
-                        </tr>
-                        <tr>
-                            <td>ВХОД XLD</td>
-                            <td>Нормальное</td>
-                        </tr>
-                        <tr>
-                            <td>ВСТРОЕННЫЕ ТОЧКИ ПОДВЕСА</td>
-                            <td>Нормальное</td>
-                        </tr>
-                        <tr>
-                            <td>ВСТРОЕННЫЕ ТОЧКИ ПОДВЕСА</td>
-                            <td>Нормальное</td>
-                        </tr>
+                        <ul class="nav nav-tabs header">
+                            <li class="active"><h3><a href="#char" data-toggle="tab" >ХАРАКТЕРИСТИКИ</a></h3></li> <li><h3><a href="#feedbacks" data-toggle="tab" >ОТЗЫВЫ</a></h3></li>
+                        </ul>
+                    <div class="tab-content">
+                        <div id="char" class="tab-pane fade in active">
 
-                        </table>
+                            <table>
+                                <tr>
+                                    <td>Вес</td>
+                                    <td>Нормальное</td>
+                                </tr>
+                                <tr>
+                                    <td>КОЛИЧЕСТВО ПОЛОС</td>
+                                    <td>Нормальное</td>
+                                </tr>
+                                <tr>
+                                    <td>РАЗМЕР</td>
+                                    <td>Нормальное</td>
+                                </tr>
+                                <tr>
+                                    <td>ТИП</td>
+                                    <td>Нормальное</td>
+                                </tr>
+                                <tr>
+                                    <td>РАСПОЛОЖЕНИЕ</td>
+                                    <td>Нормальное</td>
+                                </tr>
+                                <tr>
+                                    <td>АКУСТИЧЕСКОЕ ОФОРМЛЕНИЕ</td>
+                                    <td>Нормальное</td>
+                                </tr>
+                                <tr>
+                                    <td>ФАЗОИНВЕКТОР</td>
+                                    <td>Нормальное</td>
+                                </tr>
+                                <tr>
+                                    <td>НАЛИЧИЕ ЦИФРОВОГО ХОДА</td>
+                                    <td>Нормальное</td>
+                                </tr>
+                                <tr>
+                                    <td>НИЖНЯЯ ГРАНИЦА ДИАПАЗОНА,HZ</td>
+                                    <td>Нормальное</td>
+                                </tr>
+                                <tr>
+                                    <td>ВЕРХНЯЯ ГРАНИЦА ЧАСТОТНОГО ДИАПАЗОНА,kHZ</td>
+                                    <td>Нормальное</td>
+                                </tr>
+                                <tr>
+                                    <td>ВХОД XLD</td>
+                                    <td>Нормальное</td>
+                                </tr>
+                                <tr>
+                                    <td>ВСТРОЕННЫЕ ТОЧКИ ПОДВЕСА</td>
+                                    <td>Нормальное</td>
+                                </tr>
+                                <tr>
+                                    <td>ВСТРОЕННЫЕ ТОЧКИ ПОДВЕСА</td>
+                                    <td>Нормальное</td>
+                                </tr>
+                            </table>
+
+                            <div class="question-block">
+                                <h3>ЕСТЬ ВОПРОСЫ ?</h3>
+                                <form action="">
+                                    <input type="text" placeholder="Ваше имя">
+                                    <input type="text" placeholder="Ваш телефон">
+                                    <textarea name="" id="" cols="30" rows="10" placeholder="Текстовое сообщение"></textarea>
+                                    <input type="submit" value="ОТПРАВИТЬ">
+                                </form>
+                            </div>
+                        </div>
+                        <div id="feedbacks" class="tab-pane fade">
+                            <div class="feedback-list">
+                                <div class="feedback-element">
+                                    <div class="feedback-header">
+                                        <div class="feedback-author">ANNA TREFILIVA</div>
+                                        <div class="feedback-date">22 / 02 / 02  15:00</div>
+                                    </div>
+                                    <div class="feedback-body">
+                                        Отличный аппарат! Купил сижу кручу днями и ночами, не ем и не сплю. Счатье есть, уверяю вас, мужики!
+                                    </div>
+                                </div>
+                                <div class="feedback-element">
+                                    <div class="feedback-header">
+                                        <div class="feedback-author">ANNA TREFILIVA</div>
+                                        <div class="feedback-date">22 / 02 / 02  15:00</div>
+                                    </div>
+                                    <div class="feedback-body">
+                                        Отличный аппарат! Купил сижу кручу днями и ночами, не ем и не сплю. Счатье есть, уверяю вас, мужики!
+                                    </div>
+                                </div>
+                                <div class="feedback-element">
+                                    <div class="feedback-header">
+                                        <div class="feedback-author">ANNA TREFILIVA</div>
+                                        <div class="feedback-date">22 / 02 / 02  15:00</div>
+                                    </div>
+                                    <div class="feedback-body">
+                                        Отличный аппарат! Купил сижу кручу днями и ночами, не ем и не сплю. Счатье есть, уверяю вас, мужики!
+                                    </div>
+                                </div>
+                                <div class="feedback-element">
+                                    <div class="feedback-header">
+                                        <div class="feedback-author">ANNA TREFILIVA</div>
+                                        <div class="feedback-date">22 / 02 / 02  15:00</div>
+                                    </div>
+                                    <div class="feedback-body">
+                                        Отличный аппарат! Купил сижу кручу днями и ночами, не ем и не сплю. Счатье есть, уверяю вас, мужики!
+                                    </div>
+                                </div>
+                            </div>
+                            <form action="">
+                                <h3>ОСТАВИТЬ ОТЗЫВ</h3>
+                                <input type="text" placeholder="Ваше имя">
+                                <textarea name="" id="" cols="30" rows="10" PLACEHOLDER="Текстовое сообщение"></textarea>
+                                <input type="submit" value="ОСТАВИТЬ ОТЗЫВ">
+                            </form>
+                        </div>
+                    </div>
                 </div>
-                <div class="question-block">
-                    <h3>ЕСТЬ ВОПРОСЫ ?</h3>
-                    <form action="">
-                        <input type="text" placeholder="Ваше имя">
-                        <input type="text" placeholder="Ваш телефон">
-                        <textarea name="" id="" cols="30" rows="10" placeholder="Текстовое сообщение"></textarea>
-                        <input type="submit" value="ОТПРАВИТЬ">
-                    </form>
-                </div>
+
             </div>
             <div class="col-md-6 product-block-desc-cart">
                 <p class="article">#12514</p>
