--- a/app/checkout.html
+++ b/app/checkout.html
@@ -168,6 +168,34 @@
                         </div>
                     </div>
                 </div>
+                <div class="delivery-help">
+                    <div class="header-help">
+                        САМОВЫВОЗ
+                    </div>
+                    <div class="body">
+                        Вы можете самостоятельно забрать
+                        товар из нашего магазина
+                    </div>
+                    <div class="price">
+                            0 РУБ
+                    </div>
+
+                </div>
+
+                <div class="delivery-help">
+                    <div class="header-help">
+                        VISA/MASTERCARD
+                    </div>
+                    <div class="body">
+                        Оплата производится  банковской
+                        картой через  сервис Яндекс.Касса.
+                    </div>
+                    <div class="price">
+                            0 РУБ
+                    </div>
+
+                </div>
+
             </div>
         </div>
     </div>
