--- a/app/compare.html
+++ b/app/compare.html
@@ -101,7 +101,7 @@
                                </div>
                            </div>
                            <div class="compare-product-block-caption">
-                               Гармонь
+                               ГАРМОНЬ
                            </div>
                            <div class="compare-product-block-info">
                                Педаль эфеектов Palmer Pocket Raio Over-drive - Overdrive Pedal
